# kasmos

./: .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  REVIEW.md  check.go  go.mod  go.sum  kasmos.toml  main.go  session-ses_387c.md  skills-lock.json  skills.go  skills_test.go
.kittify/: AGENTS.md  config.yaml  metadata.yaml
.opencode/: opencode.jsonc
.planning/: config.json
app/: app.go  app_actions.go  app_actions_plan_context_test.go  app_audit_test.go  app_input.go  app_input_assign_plan_test.go  app_input_keybytes_test.go  app_input_right_on_instance_test.go  app_input_viewport_test.go  app_input_yes_keybind_test.go  app_permission_test.go  app_plan_actions_test.go  app_plan_completion_test.go  app_plan_context_actions_test.go  app_plan_creation_test.go  app_planner_signal_test.go  app_solo_agent_test.go  app_state.go  app_state_sidebar_status_test.go  app_statusbar_integration_test.go  app_test.go  app_wave_orchestration_flow_test.go  clickup_import_test.go  folder_picker.go  fsm_test_helpers_test.go  help.go  plan_title.go  plan_title_test.go  wave_orchestrator.go  wave_orchestrator_test.go  wave_prompt.go  wave_prompt_test.go
cmd/: cmd.go  plan.go  plan_test.go  serve.go  serve_test.go
config/: config.go  config_test.go  embed.go  permission_cache.go  permission_cache_test.go  profile.go  state.go  toml.go
contracts/: cli-contract.md  coder_prompt_contract_test.go  planner_prompt_contract_test.go
contrib/: import-plans.sh  kasmosdb.service
crates/kasmos/: Cargo.toml
crates/kasmos/src/: attach.rs  cleanup.rs  cmd.rs  command_handlers.rs  commands.rs  config.rs  detector.rs  engine.rs  error.rs  feature_arg.rs  git.rs  graph.rs  health.rs  launch.rs  layout.rs  lib.rs  list_specs.rs  logging.rs  main.rs  new.rs  parser.rs  persistence.rs  prompt.rs  report.rs  review.rs  review_coordinator.rs  sendmsg.rs  session.rs  shutdown.rs  signals.rs  start.rs  state_machine.rs  status.rs  stop.rs  tui_cmd.rs  tui_preview.rs  types.rs  zellij.rs
crates/kasmos/src/hub/: actions.rs  app.rs  keybindings.rs  mod.rs  scanner.rs
crates/kasmos/src/launch/: detect.rs  layout.rs  mod.rs  session.rs
crates/kasmos/src/serve/: audit.rs  dashboard.rs  lock.rs  messages.rs  mod.rs  registry.rs
crates/kasmos/src/serve/tools/: despawn_worker.rs  infer_feature.rs  list_features.rs  list_workers.rs  mod.rs  read_messages.rs  spawn_worker.rs  transition_wp.rs  wait_for_event.rs  workflow_status.rs
crates/kasmos/src/setup/: mod.rs
crates/kasmos/src/tui/: app.rs  event.rs  keybindings.rs  mod.rs
crates/kasmos/src/tui/tabs/: dashboard.rs  logs.rs  mod.rs  review.rs
crates/kasmos/src/tui/widgets/: dependency_graph.rs  mod.rs
daemon/: daemon.go
design-artifacts/: tui-keybinds.md  tui-layout-spec.md  tui-mockups.md  tui-styles.md
docs/: architecture.md  cheatsheet.md  comby-reference-guide.md  getting-started.md  keybinds.md  workflow-cheatsheet.md
keys/: keys.go  keys_test.go
scripts/: check-cli-contract.sh  review-cycle.sh  sk-start.sh
session/: cli_prompt.go  cli_prompt_test.go  instance.go  instance_lifecycle.go  instance_lifecycle_test.go  instance_planfile_test.go  instance_session.go  instance_session_async_test.go  instance_test.go  permission_prompt.go  storage.go  terminal.go
ui/: audit_pane.go  consts.go  diff.go  fill.go  git_pane.go  info_pane.go  info_pane_test.go  list.go  list_highlight_test.go  list_renderer.go  list_styles.go  main_test.go  menu.go  menu_test.go  nav_panel_test.go  preview.go  (+12 more)
(+578 files in other folders)
