[package]
name = "kasmos"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
toml = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
nix = { version = "0.31", features = ["fs"] }
libc = "0.2"
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
kdl = "6.5"
shell-escape = "0.1"
which = "8.0"
notify = "9.0.0-rc.1"
ratatui = { version = "0.30", features = ["crossterm"] }
ratatui-macros = "0.7"
crossterm = { version = "0.29", features = ["event-stream"] }
tui-popup = "0.7"
tui-nodes = "0.10.0"
futures-util = "0.3.31"

[dev-dependencies]
tempfile = "3.25.0"
