[package]
name = "kasmos"
version = "0.1.0"
edition.workspace = true

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:futures-util", "dep:tui-popup", "dep:tui-nodes", "dep:tui-logger", "dep:ratatui-macros"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
toml = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
nix = { version = "0.31", features = ["fs"] }
libc = "0.2"
async-trait = "0.1.89"
clap = { version = "4.5.58", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
kdl = "6.5"
shell-escape = "0.1"
which = "8.0"
notify = "9.0.0-rc.1"
ratatui = { version = "0.30", features = ["crossterm"], optional = true }
ratatui-macros = { version = "0.7", optional = true }
crossterm = { version = "0.29", features = ["event-stream"], optional = true }
tui-popup = { version = "0.7", optional = true }
tui-nodes = { version = "0.10.0", optional = true }
futures-util = { version = "0.3.31", optional = true }
tui-logger = { version = "0.18", features = ["tracing-support"], optional = true }
log = "0.4"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "0.8"
regex = "1"

[dev-dependencies]
tempfile = "3.25.0"
