[package]
name = "kasmos"
version.workspace = true
edition.workspace = true
description = "Zellij-based AI agent orchestrator for multi-pane development workflows"
repository.workspace = true
license.workspace = true
readme = "../../README.md"
keywords = ["zellij", "ai", "orchestrator", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0"
anyhow = "1.0.101"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
toml = "0.9"
tokio = { version = "1.49.0", features = ["full"] }
libc = "0.2"
clap = { version = "4.5.58", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
kdl = "6.5"
shell-escape = "0.1"
which = "8.0"
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
json5 = "1.3"
rmcp = { version = "0.15", features = ["server", "transport-io"] }
schemars = "1.2"
regex = "1"
tempfile = "3.25.0"
